// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 131604,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 131508,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 278478,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 295266,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 308659,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 294724,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 212931,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 212807,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 264477,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 211942,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 365833,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 211773,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 343777,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 307369,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 285422,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 170859,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 189815,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 231031,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 199174,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 231099,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 199128,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 379349,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 264956,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 366340,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 255479,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 293966,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 266172,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 294485,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 371706,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 394925,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 339176,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 389958,
}
`;
